# argos

./: .env.example  .gitignore  AGENTS.md  Dockerfile.core  Dockerfile.core.dev  Dockerfile.processing  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.yml
core/: .air.toml  README.md  go.mod
core/cmd/api/: main.go
core/internal/analyses/: handler.go  repository.go  sql_repository.go  usecases.go
core/internal/axis/: client.go  client_test.go
core/internal/catalog/: classifier.go  classifier_test.go  handler.go  repository.go  sql_repository.go  usecases.go
core/internal/chat/: handler.go
core/internal/config/: config.go
core/internal/database/: database.go
core/internal/fields/: handler.go  repository.go  sql_repository.go  usecases.go  usecases_test.go
core/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_dataset_archive.down.sql  0002_dataset_archive.up.sql  0003_axis_insights.down.sql  0003_axis_insights.up.sql  0004_dataset_semantics.down.sql  0004_dataset_semantics.up.sql  0005_fields.down.sql  0005_fields.up.sql
core/wire/: http.go  setup.go
docs/: ARCHITECTURE.md  ROADMAP.md  contracts.md
docs/adr/: 0001-monorepo-runtime-boundaries.md
processing/python/: pyproject.toml
processing/python/argos_processing/: __init__.py  cli.py  discovery.py  export.py  indices.py  metadata.py  pipeline.py  schemas.py
processing/python/tests/: test_discovery.py  test_indices.py
scripts/: seed-companion-assist.sh  seed-nexus-rules.sh
ui/: Dockerfile  index.html  package-lock.json  package.json
ui/src/: main.tsx  styles.css
(+8 files in other folders)
