[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argos-processing"
version = "0.1.0"
description = "CV/GIS processing worker for Argos drone imagery"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pillow>=10.0",
  "tifffile>=2024.2.12",
]

[project.optional-dependencies]
gis = ["rasterio>=1.3"]
dev = ["pytest>=8.0"]

[project.scripts]
argos-processing = "argos_processing.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["argos_processing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

